@@ -42,6 +42,9 @@ length incorrectly, which could result in buffer overflow.
 
 10. Remove redundant line of code (accidentally left in ages ago).
 
+11. Applied C++ patch from Irfan Adilovic to guard 'using std::' directives 
+with namespace pcrecpp (Bugzilla #2084).
+
 
 Version 8.40 11-January-2017
 ----------------------------
